test/spec_vectors/type-subtyping/fail/module_69.wat
(module (type $a (sub (array (mut (ref any))))) (type $b (sub $a (array (ref any)))))